--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "ag-grid-react": "^32.0.2",
     "clsx": "^2.1.1",
     "emex-shared": "link:emex-shared",
+    "js-cookie": "^3.0.5",
+    "js-sha512": "^0.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwind-styled-components": "^2.2.0",
     "wouter": "^3.3.1"
