--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "bc": "better-commits",
     "lint": "biome lint --write *.* ./src",
     "format": "biome format --write *.* ./src",
     "check": "biome check --write *.* ./src",
@@ -38,6 +39,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.20",
+    "better-commits": "^1.15.7",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
     "tailwindcss-radix-colors": "^1.3.1",
